# NeXus-Streamer

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Jenkinsfile  NeXus-Streamer.spec  README.md  appveyor.yml  codecov.yml  docker-compose.yaml  docker-compose.yml  docker-start.sh  isis_nexus_streamer_for_mantid.spec  jenkins.sh  travis.sh  unitTestRunner.cpp
cmake/: FindHDF5.cmake  FindLibRDKafka.cmake
cmake/templates/: Version.h.in
conan/: conanfile.txt
core/: CMakeLists.txt
core/include/: EventDataFrame.h  HistogramFrame.h  Message.h
data/: SANS2D_minimal.nxs  SANS2D_minimal_json.txt  SANS2D_minimal_with_geometry.nxs  SANS_test_reduced.hdf5  convert_hdf5_file_to_uncompressed.py  create_detspecmap.py  minimal_example_with_geometry.nxs  minimal_histogram_example.nxs  nexus_recompress.py  nexus_recompress_all.py  reduce_hdf5_file.py  requirements.txt
docker/: docker-start.sh  example_config.ini
documentation/: README.md  dev_notes.md  profiling.md  usage.md
event_data/: CMakeLists.txt
event_data/include/: DetectorSpectrumMapData.h  EventData.h  RunData.h  SampleEnvironmentEvent.h  SampleEnvironmentEventDouble.h  SampleEnvironmentEventInt.h  SampleEnvironmentEventLong.h  SampleEnvironmentEventString.h  SampleEnvironmentEventULong.h  ba57_run_info_generated.h  det_spec_mapping_schema_generated.h  ev42_events_generated.h  event_schema_generated.h  f141_epics_nt_generated.h  is84_isis_events_generated.h  run_info_schema_generated.h
event_data/src/: DetectorSpectrumMapData.cpp  EventData.cpp  RunData.cpp  SampleEnvironmentEvent.cpp  SampleEnvironmentEventDouble.cpp  SampleEnvironmentEventInt.cpp  SampleEnvironmentEventLong.cpp  SampleEnvironmentEventString.cpp  SampleEnvironmentEventULong.cpp  det_spec_mapping_schema.fbs  event_schema.fbs  run_info_schema.fbs
event_data/test/: BenchmarkSerialisation.cpp  DetectorSpectrumMapDataTest.cpp  EventDataTest.cpp  RunDataTest.cpp  SampleEnvironmentEventTest.cpp
generate_json/: README.md  generate_json_description.py  requirements.txt
nexus_file_reader/: CMakeLists.txt
nexus_file_reader/include/: FileReader.h  NexusFileReader.h  UnitConversion.h
nexus_file_reader/src/: NexusFileReader.cpp  UnitConversion.cpp
nexus_file_reader/test/: HDF5FileTestHelpers.cpp  HDF5FileTestHelpers.h  NexusFileReaderTest.cpp  UnitConversionTest.cpp
nexus_producer/: CMakeLists.txt
nexus_producer/include/: EventPublisher.h  JSONDescriptionLoader.h  KafkaEventPublisher.h  KafkaPublisher.h  MockEventPublisher.h  MockPublisher.h  NexusPublisher.h  OptionalArgs.h  Publisher.h  Timer.h  TopicNames.h
nexus_producer/include/win32/: wingetopt.h
nexus_producer/src/: JSONDescriptionLoader.cpp  KafkaEventPublisher.cpp  KafkaPublisher.cpp  NexusPublisher.cpp  Timer.cpp  main.cpp  wingetopt.c
nexus_producer/test/: JSONDescriptionLoaderTest.cpp  NexusPublisherTest.cpp  TimerTest.cpp
scripts/: read_runs.py
scripts/ISISDAE/: RunInfo.py
scripts/ISISStream/: RunInfo.py
serialisation/: CMakeLists.txt
serialisation/include/: DetectorSpectrumMapData.h  EventData.h  HistogramData.h  RunData.h  SampleEnvironmentEventInt.h  SampleEnvironmentEventUInt.h  SampleEnvironmentEventULong.h  UUID.h
serialisation/src/: DetectorSpectrumMapData.cpp  EventData.cpp  HistogramData.cpp  RunData.cpp  SampleEnvironmentEvent.cpp  SampleEnvironmentEventLong.cpp  SampleEnvironmentEventUInt.cpp  SampleEnvironmentEventULong.cpp  UUID.cpp
serialisation/test/: BenchmarkSerialisation.cpp  DetectorSpectrumMapDataTest.cpp  EventDataTest.cpp  HistogramDataTest.cpp  RunDataTest.cpp  SampleEnvironmentEventTest.cpp
start_command/: create_start_command.py  requirements.txt
